--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@ body {background-image: url(images/swans.jpg);
     
     }
 
-nav {text-align: center;}
+nav {text-align: center;
+    font-size: 15pt;}
 
 h1 {color: black;
     font-family: 'indie flower' , cursive ;
