--- a/cat.css
+++ b/cat.css
@@ -7,3 +7,7 @@ nav {text-align: center;
 h1 {text-align: center;
     font-size:55pt;
     font-family:'Sacramento', cursive;}
+
+h2 {text-align: center;
+    font-family: 'Sacramento', cursive;
+    font-size: 45pt;}
