--- a/plant.css
+++ b/plant.css
@@ -9,3 +9,7 @@ h1 {text-align: center;
     font-size: 100pt;
     font-family: 'Amatic SC', cursive;
 }
+
+h2 {text-align: center;
+    font-family: 'Amatic SC', cursive;
+    font-size: 50pt;}
