changed background image and color of border...just playing around

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-body {background-image: url(images/swans.jpg);
-    border: 10px double black;
+body {background-image: url(images/cranes.jpg);
+    border: 30px double pink;
     border-radius: 50% 50% 50% 50%;
     padding: 5%;
     
