changed color of border

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {background-image: url(images/cranes.jpg);
-    border: 30px double pink;
+    border: 30px double #BA910B;
     border-radius: 50% 50% 50% 50%;
     padding: 5%;
     
